--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ li {
     border-radius: 10px;
     text-align: center;
     margin-top: 50px;
-    background: linear-gradient(to bottom, #00000080, #3e3e3e80), url('/Images/Group 13 (1) (1).png');
+    background: linear-gradient(to bottom, #00000080, #3e3e3e80), url('https://i.ibb.co/bRqjwTS/Group-13-1-1.png');
     background-size: cover;
     background-position: center center; 
     background-repeat: no-repeat;
@@ -262,7 +262,7 @@ li {
 }
 
 .tour-1 {
-  background-image: url('/Images/Group\ 39.png');
+  background-image: url('https://i.ibb.co/P1cCp1m/Group-39.png');
   background-repeat: no-repeat;
   background-size: cover; /* Ensures the background image covers the container */
   padding: 50px;
@@ -271,7 +271,7 @@ li {
 }
 
 .tour-2{
-  background-image: url('/Images/Group\ 40.png');
+  background-image: url('https://i.ibb.co/x8VrCHw/Group-40.png');
   background-repeat: no-repeat;
   background-size: cover; /* Ensures the background image covers the container */
   padding: 50px;
@@ -308,6 +308,7 @@ li {
 .mountain-img img{
   width: 550px;
   height: 400px;
+  border-radius: 10px;
 }
 
 /* Newsletter section */
