--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ nav {
 }
 
 .hero-travel img {
-  width: 50px;
+  max-width: 50px;
   height: 45px;
 }
 
@@ -87,7 +87,7 @@ li {
 }
 
 .nav-toggle-label span {
-  width: 25px;
+  max-width: 25px;
   height: 3px;
   background-color: #333;
   margin: 5px;
@@ -197,6 +197,8 @@ li {
 
 
 
+
+
 .btn{
     background-color: #ff5722;
     color: #fff;
@@ -252,7 +254,7 @@ li {
   padding: 30px;
   background-color: #ffeaea;
   border: solid 1px #ffc3c3;
-  width: 455px;
+  max-width: 455px;
 }
 
 /* tours section */
@@ -284,7 +286,7 @@ li {
   border-radius: 20px;
   background-color: #ffffffcd;
   border: solid 1px white;
-  width: 509px;
+  max-width: 509px;
 }
 
 .tour-1-content{
@@ -384,7 +386,7 @@ nav{
   ul {
       display: none;
       flex-direction: column;
-      width: 100%;
+      max-width: 100%;
   }
 
   ul.active {
@@ -393,7 +395,7 @@ nav{
 
   li {
       text-align: center;
-      width: 100%;
+      max-width: 100%;
       padding: 1rem 0;
   }
 
@@ -419,6 +421,14 @@ nav{
     text-wrap: wrap;
   }
 
+
+  .mountain-img img{
+    max-width: 450px;
+  }
+  .popular-tours-image img{
+    max-width: 400px;
+  }
+
   .cards{
     margin: 40px 20px;
   }
@@ -432,7 +442,7 @@ nav{
   }
 
   .tour-content, .tour-1-content{
-    width: 400px;
+    max-width: 400px;
   }
 
   .tour-1-content{
