--- a/style.css
+++ b/style.css
@@ -10,24 +10,25 @@
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
-  }
+}
 
-  /* shared style */
-
-  .titles{
+/* shared style */
+.titles {
     text-align: center;
     margin-bottom: 50px;
-  }
-  
-  .title{
+}
+
+.title {
     font-size: 35px;
     font-weight: bold;
-  }
-  .title-description{
+}
+
+.title-description {
     margin: 15px 0;
     color: #555;
-  }
-  .description{
+}
+
+.description {
     color: #555;
     margin: 15px 0;
     align-items: center;
@@ -35,66 +36,63 @@
     word-wrap: break-word;
 }
 
-  /* header styles */
-
-  header{
+/* header styles */
+header {
     margin: 50px 100px;
-  }
+}
+
 /* nav styles */
 nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
 }
 
 .hero-travel {
-  display: flex;
-  gap: 16px;
-  align-items: center;
+    display: flex;
+    gap: 16px;
+    align-items: center;
 }
 
 .hero-travel img {
-  max-width: 50px;
-  height: 45px;
+    max-width: 50px;
+    height: 45px;
 }
 
 .text-primary {
-  color: #FF5400; 
+    color: #FF5400; 
 }
 
 ul {
-  list-style: none;
-  gap: 20px;
-  color: #424247;
-  display: flex;
-  margin: 0;
-  padding: 0;
+    list-style: none;
+    gap: 20px;
+    color: #424247;
+    display: flex;
+    margin: 0;
+    padding: 0;
 }
 
 li {
-  padding: 8px;
+    padding: 8px;
 }
 
 .nav-toggle {
-  display: none;
+    display: none;
 }
 
 .nav-toggle-label {
-  display: none;
-  flex-direction: column;
-  cursor: pointer;
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
 }
 
 .nav-toggle-label span {
-  max-width: 25px;
-  height: 3px;
-  background-color: #333;
-  margin: 5px;
+    width: 30px;
+    height: 3px;
+    background-color: #333; 
+    margin: 5px 0;
 }
-
-/* Media query for smaller screens */
-
 
 
   /* banner styles */
@@ -324,7 +322,6 @@ li {
 }
 
 .new-sletter-content{
-
   padding: 40px;
   border: solid 1px #e65c00;
   border-radius: 10px;
@@ -332,7 +329,7 @@ li {
 
 
 
-.newletter-input{
+.newsletter-input{
   padding: 15px 7px;
   border-radius: 5px;
   border: none;
@@ -369,7 +366,7 @@ nav{
   align-items: center;
 }
 
-  header, .tours{
+  header, .popular-tours-container, .tours{
     margin: 20px 20px;
   }
 
@@ -380,31 +377,32 @@ nav{
   }
 
   .nav-toggle-label {
-      display: flex;
+    display: flex;
   }
-
+  
   ul {
-      display: none;
-      flex-direction: column;
-      max-width: 100%;
+    display: none;
+    flex-direction: column;
+    max-width: 100%;
   }
 
   ul.active {
-      display: flex;
+    display: flex;
   }
 
   li {
-      text-align: center;
-      max-width: 100%;
-      padding: 1rem 0;
+    text-align: center;
+    max-width: 100%;
+    padding: 1rem 0;
   }
 
   .nav-toggle:checked + .nav-toggle-label + ul {
-      display: flex;
-  }
+    display: flex;
+  };
+  
 
-  .banner{
-    padding: 50px;
+  .banner {
+    padding: 10px !important;
   }
 
   .search-bar, .popular-tours{
@@ -414,11 +412,17 @@ nav{
   .search-bar-input,
   .search-bar-select {
     margin-bottom: 15px;
-
+    color: #555;
   } 
+
+
+  .popular-tours-container{
+    margin-bottom: 100px;
+  }
 
   .popular-tours-content, ul li{
     text-wrap: wrap;
+    text-align: left;
   }
 
 
